--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 .container ,#particles-js{
+  z-index: 100;
 
   
 
@@ -11,7 +12,7 @@ html {
   
 }
 body{
- height:100%; 
+  z-index: -1;
   margin: 0px;
 }
 canvas{
@@ -28,7 +29,7 @@ canvas{
 h1{
   color: azure;
   font-family: PingFangSC-Ultrathin, sans-serif;
-  letter-spacing: 30px;
+  letter-spacing: 20px;
 }
 #spin{
   margin:60px;
@@ -60,10 +61,11 @@ h1{
   color: azure;
   font-family: PingFangSC-Thin, sans-serif;
   font-size: large;
+  text-decoration: none;
 
 }
 #btn:hover{
-  background-color: blue;
+  /* background-color: blue; */
   color: blanchedalmond;
   z-index: 100;
   
@@ -84,7 +86,7 @@ h1{
   animation-duration: 20000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear; 
-  z-index: 0;
+  z-index: ;
   opacity: 0.2;
 }
 @keyframes spin {
@@ -104,10 +106,9 @@ h1{
   }
 }
 .mycard{
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   max-width: 200px;
- 
 }
 .mycard:hover{
   
@@ -117,15 +118,15 @@ h1{
 }
 
 
-/* .card_container{
-  z-index: 100;
+.card_container{
+  z-index: 10;
   opacity: 1;
   margin: 10%;
  display: flex;
  flex-wrap: wrap; 
  opacity: 1;
  justify-content: space-around;
-} */
+}
 
 .link_wrapper{
 
@@ -135,13 +136,14 @@ h1{
   margin: 30px;
 }
 .reveal_card{
+  z-index: 100;
 margin-top: 60px;
   max-width: 400px;
   width: 70%;
 }
 
 
-#card1{
+/* #card1{
   --animate-delay: 0.1s;
 }
 #card2{
@@ -161,7 +163,7 @@ margin-top: 60px;
 }
 #card7{
   --animate-delay: 1.3s;
-}
+} */
 
 /* a{
 
