--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ h1{
 .card_container{
   z-index: 10;
   opacity: 1;
-  margin: 10% 10% 2% 10%;%;
+  margin: 5% 5% 2% 5%;
   display: flex;
  flex-wrap: wrap; 
  opacity: 1;
@@ -192,7 +192,7 @@ margin-top: 60px;
   .card{
     line-height:2em;
     color: azure;
-    width: 95%;
+    width: 100%;
     margin-top: 10px;
 
   }
