--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h1{
   animation-duration: 20000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear; 
-  z-index: ;
+  z-index: 0;
   opacity: 0.2;
 }
 @keyframes spin {
