--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ h1{
 .card-link{
 
   color: azure;
+  position: relative;
 
 }
 
@@ -194,6 +195,7 @@ h1{
   margin: 30px;
 }
 .reveal_card{
+  position: relative;
   z-index: 100;
   margin-top: 60px;
   max-width: 400px;
@@ -202,6 +204,7 @@ h1{
 
 
 .card{
+  margin: auto;
   line-height:3em;
   color: azure;
   width: 40%;
