--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ canvas{
   bottom: 0;
   left: 0;
 }
-h1{
+h2{
   font-size:10fr;
   color: azure;
   font-family: PingFangSC-Ultrathin, sans-serif;
@@ -195,6 +195,7 @@ h1{
   margin: 30px;
 }
 .reveal_card{
+
   position: relative;
   z-index: 100;
   margin-top: 60px;
@@ -204,6 +205,7 @@ h1{
 
 
 .card{
+  padding: 5px;
   margin: auto 50px auto 50px ;;
   line-height:3em;
   color: azure;
