--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ canvas{
   bottom: 0;
   left: 0;
 }
-h2{
+h1 , h2{
   font-size:10fr;
   color: azure;
   font-family: PingFangSC-Ultrathin, sans-serif;
