--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ h1 , h2{
 
   .card{
     margin: auto;
-    line-height:2em;
+    line-height:25px;
     color: azure;
     width: 100%;
     margin-top: 10px;
