--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
-.container ,#particles-js{
+#particles-js{
+  margin: auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* ★ */
+
+}
+
+body{
+  height: 100%;
+}
+.wrapper{
+  margin: auto;
+  height: 100%;
+  display: flex;
+  align-items: center; /* ★ */
+}
+
+.container{
+  margin: auto;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
   z-index: 100;
 
   margin: auto;
-
+  align-items: center; /* ★ */
   text-align: center
 
 }
@@ -12,6 +35,15 @@
   
 
 }
+#reveal-title{
+  margin: 10px , 10px , 10px , 10px;
+  font-size: 20px;
+  color: azure;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+
+
 .btn-div{
   display: flex;
   letter-spacing: 10px;
@@ -48,12 +80,32 @@ canvas{
   bottom: 0;
   left: 0;
 }
-h1 , h2{
+
+.title-text{
+  font-size: 30px;
+  color: white;
+  font-family: PingFangSC-Ultrathin, sans-serif;
+  letter-spacing: 10px;
+}
+
+h1{
+  font-size: 50px;
+  color: rgb(255, 255, 255);
+  font-family: PingFangSC-Ultrathin, sans-serif;
+  margin: 0;
+  /* letter-spacing: 10px; */
+  margin-top: 0px;
+
+}
+h2{
   font-size:10fr;
   color: azure;
   font-family: PingFangSC-Ultrathin, sans-serif;
   letter-spacing: 10px;
-  margin-top: 30px;
+  /* margin-top: 30px; */
+}
+.title-section{
+  margin: 30px  ;
 }
 #spin{
   margin:60px;
@@ -84,6 +136,7 @@ h1 , h2{
   margin: 30px;
 }
 #btn{
+  margin: 10px;
   padding: 10px;
   border-style:solid;
   border-width: 2px;
@@ -134,7 +187,7 @@ h1 , h2{
   color: azure;
   position: relative;
   flex-direction: column;
-  gap: 30px 30px;
+  gap: 15px 30px;
 }
 
 
@@ -202,10 +255,6 @@ h1 , h2{
 .link_wrapper{
 
 }
-
-.title{
-  margin: 30px;
-}
 .reveal_card{
 
   position: relative;
@@ -231,6 +280,7 @@ h1 , h2{
 
 
 .card-title{
+  padding: 10px;
   font-size:x-large;
 }
 
