--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@
 }
 
 body{
+  display: flex;
   height: 100%;
+  align-items: center; /* ★ */
 }
 .wrapper{
+  display: flex;
   margin: auto;
   height: 100%;
-  display: flex;
   align-items: center; /* ★ */
 }
 
@@ -84,14 +86,14 @@ canvas{
 .title-text{
   font-size: 30px;
   color: white;
-  font-family: PingFangSC-Ultrathin, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   letter-spacing: 10px;
 }
 
 h1{
   font-size: 50px;
   color: rgb(255, 255, 255);
-  font-family: PingFangSC-Ultrathin, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   margin: 0;
   /* letter-spacing: 10px; */
   margin-top: 0px;
@@ -100,7 +102,7 @@ h1{
 h2{
   font-size:10fr;
   color: azure;
-  font-family: PingFangSC-Ultrathin, sans-serif;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   letter-spacing: 10px;
   /* margin-top: 30px; */
 }
@@ -108,7 +110,7 @@ h2{
   margin: 30px  ;
 }
 #spin{
-  margin:60px;
+  margin:30px;
   width: 60%;
   text-align: center;
   max-width: 500px;
@@ -207,6 +209,7 @@ h2{
   z-index: 0;
   opacity: 0.2;
 }
+
 @keyframes spin {
   from {
       transform:rotate(0deg);
