修正電腦版水平置中問題

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
   display: flex;
   height: 100%;
   align-items: center; /* ★ */
+  justify-content: center;
 }
 .wrapper{
   display: flex;
