--- a/style.css
+++ b/style.css
@@ -42,20 +42,20 @@ body{
   margin: 10px , 10px , 10px , 10px;
   font-size: 20px;
   color: azure;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
 
 }
 
 
 .btn-div{
   display: flex;
-  letter-spacing: 10px;
+  /* letter-spacing: 10px; */
   justify-content: center;
   gap: 5px;
 }
 #link{
-  display: inline;
-  width: 150px;
+  /* display: inline; */
+  /* width: 150px; */
 }
 
 .button-image{
@@ -65,7 +65,7 @@ body{
 
 html {
   height:100%; 
-  font-family: PingFangSC-Ultrathin, sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;  
   
 }
 body{
@@ -73,7 +73,9 @@ body{
   margin: 0px;
 }
 canvas{
-  background-image: linear-gradient(#1A0B75, #730A75);
+  background-image: url("Galaxy-Background.jpg");
+  background-position: center;
+  background-size: cover;
   z-index: -1;
   width: 100%;
   height: 100%;
@@ -87,14 +89,14 @@ canvas{
 .title-text{
   font-size: 30px;
   color: white;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   letter-spacing: 10px;
 }
 
 h1{
   font-size: 50px;
   color: rgb(255, 255, 255);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   margin: 0;
   /* letter-spacing: 10px; */
   margin-top: 0px;
@@ -103,7 +105,7 @@ h1{
 h2{
   font-size:10fr;
   color: azure;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   letter-spacing: 10px;
   /* margin-top: 30px; */
 }
